--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -159,7 +159,7 @@ chartlabel.upperlimit     = L\u00EDmite Superior
 checkbox.onlyweb    = Solo registros de web
 checkbox.updatedata = Actualizar datos
 
-chk.offlinemode  = Modo offline
+chk.offlinemode  = Modo sin conexi\u00F3n
 chk.savehost     = Recordar host
 chk.saveusername = Recordar usuario
 
@@ -844,58 +844,60 @@ tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
 tabs.RISK                = Riesgo de abandono
 
-text.activitycompletion = Actividades finalizadas
-text.all                = Todos
-text.author             = Autores:
-text.betweendates       = Entre {0} y {1} d\u00EDas
-text.cache              = Archivos locales
-text.component          = Componente
-text.confirmation       = Confirmaci\u00F3n
-text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
-text.coursedata         = Datos del curso
-text.coursemodule       = M\u00F3dulo del curso
-text.datetime           = Fecha y hora
-text.days               = d\u00EDas
-text.empty              = S.C
-text.event              = Evento
-text.exportcsv          = Exportar CSV...
-text.exportcsvdesglosed = Exportar CSV desglosado...
-text.exportpng          = Exportar PNG...
-text.fail               = Suspenso
-text.favorite           = Destacados
-text.filteredusers      = Usuarios filtrados
-text.future             = Futuros
-text.gradeitems         = Calificaciones
-text.hours              = horas
-text.inprogress         = En progreso
-text.ip                 = Direcci\u00F3n IP
-text.lastaccess         = \u00DAltimo acceso: 
-text.license            = Licencia: MIT
-text.logs               = Registros
-text.minutes            = minutos
-text.moodle             = Moodle: 
-text.never              = Nunca
-text.noActivity         = Sin actividad
-text.nousers            = No hay coincidencias
-text.online_false       = Modo: Offline
-text.online_true        = Modo: Online
-text.origin             = Origen
-text.pass               = Aprobado
-text.past               = Pasados
-text.recent             = Recientes
-text.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
-text.search             = Buscar
-text.seconds            = segundos
-text.section            = Secci\u00F3n
-text.sectionplaceholder = P\u00E1gina principal
-text.see                = Ver 
-text.selectall          = Seleccionar/Deseleccionar todos
-text.selectedUsers      = Usuarios seleccionados
-text.session            = N\u00BA de sesiones: 
-text.stats              = Estad\u00EDsticas
-text.thanks             = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
-text.thankstitle        = Agradecimientos:
-text.total              = Total
+text.activitycompletion  = Actividades finalizadas
+text.all                 = Todos
+text.author              = Autores:
+text.betweendates        = Entre {0} y {1} d\u00EDas
+text.cache               = Archivos locales
+text.component           = Componente
+text.confirmation        = Confirmaci\u00F3n
+text.confirmationtext    = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
+text.coursedata          = Datos del curso
+text.coursemodule        = M\u00F3dulo del curso
+text.datetime            = Fecha y hora
+text.days                = d\u00EDas
+text.empty               = S.C
+text.event               = Evento
+text.exportcsv           = Exportar CSV...
+text.exportcsvdesglosed  = Exportar CSV desglosado...
+text.exportpng           = Exportar PNG...
+text.fail                = Suspenso
+text.favorite            = Destacados
+text.filteredusers       = Usuarios filtrados
+text.future              = Futuros
+text.gradeitems          = Calificaciones
+text.hours               = horas
+text.inprogress          = En progreso
+text.ip                  = Direcci\u00F3n IP
+text.lastaccess          = \u00DAltimo acceso: 
+text.license             = Licencia: MIT
+text.logs                = Registros
+text.minutes             = minutos
+text.modelversionchanged = Versi\u00F3n incompatible de cach\u00E9 de datos con esta nueva versi\u00F3n.\r\nEs necesario recargar los datos de la asignatura.
+text.moodle              = Moodle: 
+text.never               = Nunca
+text.noActivity          = Sin actividad
+text.nousers             = No hay coincidencias
+text.online_false        = Modo: Offline
+text.online_true         = Modo: Online
+text.origin              = Origen
+text.pass                = Aprobado
+text.past                = Pasados
+text.recent              = Recientes
+text.restoredefault      = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
+text.search              = Buscar
+text.seconds             = segundos
+text.section             = Secci\u00F3n
+text.sectionplaceholder  = P\u00E1gina principal
+text.see                 = Ver 
+text.selectall           = Seleccionar/Deseleccionar todos
+text.selectedUsers       = Usuarios seleccionados
+text.session             = N\u00BA de sesiones: 
+text.stats               = Estad\u00EDsticas
+text.thanks              = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
+text.thankstitle         = Agradecimientos:
+text.total               = Total
+text.wantonlinemode      = \u00BFQuieres entrar en modo con conexi\u00F3n?
 
 thirdInterval = Tercer intervalo
 
