--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -844,58 +844,60 @@ tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
 
-text.activitycompletion = Activities completion
-text.all                = All
-text.author             = Authors:
-text.betweendates       = Between {0} and {1} days
-text.cache              = Local Files
-text.component          = Component
-text.confirmation       = Confirmation
-text.confirmationtext   = Are you sure to remove the cache of the selected course?
-text.coursedata         = Course data
-text.coursemodule       = Course Module
-text.datetime           = Date and time
-text.days               = Days
-text.empty              = N.A
-text.event              = Event
-text.exportcsv          = Export CSV...
-text.exportcsvdesglosed = Export breakdown CSV...
-text.exportpng          = Export PNG...
-text.fail               = Fail
-text.favorite           = Starred
-text.filteredusers      = Filtered users
-text.future             = Future
-text.gradeitems         = Grades
-text.hours              = Hours
-text.inprogress         = In progress
-text.ip                 = IP Address
-text.lastaccess         = Last access: 
-text.license            = License: MIT
-text.logs               = Logs
-text.minutes            = Minutes
-text.moodle             = Moodle: 
-text.never              = Never
-text.noActivity         = No activity
-text.nousers            = No coincidences
-text.online_false       = Mode: Offline
-text.online_true        = Mode: Online
-text.origin             = Origin
-text.pass               = Pass
-text.past               = Past
-text.recent             = Recent
-text.restoredefault     = Are you sure you want to restore the default settings?
-text.search             = Search
-text.seconds            = Seconds
-text.section            = Sections
-text.sectionplaceholder = Front page
-text.see                = See 
-text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected users
-text.session            = # of sessions: 
-text.stats              = Statistics
-text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Acknowledgments:
-text.total              = Total
+text.activitycompletion  = Activities completion
+text.all                 = All
+text.author              = Authors:
+text.betweendates        = Between {0} and {1} days
+text.cache               = Local Files
+text.component           = Component
+text.confirmation        = Confirmation
+text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.coursedata          = Course data
+text.coursemodule        = Course Module
+text.datetime            = Date and time
+text.days                = Days
+text.empty               = N.A
+text.event               = Event
+text.exportcsv           = Export CSV...
+text.exportcsvdesglosed  = Export breakdown CSV...
+text.exportpng           = Export PNG...
+text.fail                = Fail
+text.favorite            = Starred
+text.filteredusers       = Filtered users
+text.future              = Future
+text.gradeitems          = Grades
+text.hours               = Hours
+text.inprogress          = In progress
+text.ip                  = IP Address
+text.lastaccess          = Last access: 
+text.license             = License: MIT
+text.logs                = Logs
+text.minutes             = Minutes
+text.modelversionchanged = Incompatible version of data cache with this new version.\r\nIt is necessary to reload the course data.
+text.moodle              = Moodle: 
+text.never               = Never
+text.noActivity          = No activity
+text.nousers             = No coincidences
+text.online_false        = Mode: Offline
+text.online_true         = Mode: Online
+text.origin              = Origin
+text.pass                = Pass
+text.past                = Past
+text.recent              = Recent
+text.restoredefault      = Are you sure you want to restore the default settings?
+text.search              = Search
+text.seconds             = Seconds
+text.section             = Sections
+text.sectionplaceholder  = Front page
+text.see                 = See 
+text.selectall           = Select/Deselect all
+text.selectedUsers       = Selected users
+text.session             = # of sessions: 
+text.stats               = Statistics
+text.thanks              = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+text.thankstitle         = Acknowledgments:
+text.total               = Total
+text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = Third interval
 
