--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -844,58 +844,60 @@ tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
 
-text.activitycompletion = Activities completion
-text.all                = All
-text.author             = Authors:
-text.betweendates       = Between {0} and {1} days
-text.cache              = Fichiers locaux
-text.component          = Component
-text.confirmation       = Confirmation
-text.confirmationtext   = Are you sure to remove the cache of the selected course?
-text.coursedata         = Course data
-text.coursemodule       = Course Module
-text.datetime           = Date and time
-text.days               = Journ\u00E9es
-text.empty              = N.A
-text.event              = Event
-text.exportcsv          = Export CSV...
-text.exportcsvdesglosed = Export breakdown CSV...
-text.exportpng          = Export PNG...
-text.fail               = Fail
-text.favorite           = Favoris\r\n
-text.filteredusers      = Filtered users
-text.future             = Future
-text.gradeitems         = Grades
-text.hours              = Heures
-text.inprogress         = In progress
-text.ip                 = IP Address
-text.lastaccess         = Dernier acc\u00E8s:
-text.license            = License: MIT
-text.logs               = Logs
-text.minutes            = Minutes
-text.moodle             = Moodle: 
-text.never              = Jamais
-text.noActivity         = No activity
-text.nousers            = Pas de co\u00EFncidences
-text.online_false       = Mode: Offline
-text.online_true        = Mode: Online
-text.origin             = Origin
-text.pass               = Pass
-text.past               = Past
-text.recent             = R\u00E9cente
-text.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
-text.search             = Search
-text.seconds            = Secondes
-text.section            = Section
-text.sectionplaceholder = Page de garde
-text.see                = See 
-text.selectall          = Select/Deselect all
-text.selectedUsers      = Selected users
-text.session            = # of sessions: 
-text.stats              = Statistiques
-text.thanks             = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle        = Acknowledgments:
-text.total              = Total
+text.activitycompletion  = Activities completion
+text.all                 = All
+text.author              = Authors:
+text.betweendates        = Between {0} and {1} days
+text.cache               = Fichiers locaux
+text.component           = Component
+text.confirmation        = Confirmation
+text.confirmationtext    = Are you sure to remove the cache of the selected course?
+text.coursedata          = Course data
+text.coursemodule        = Course Module
+text.datetime            = Date and time
+text.days                = Journ\u00E9es
+text.empty               = N.A
+text.event               = Event
+text.exportcsv           = Export CSV...
+text.exportcsvdesglosed  = Export breakdown CSV...
+text.exportpng           = Export PNG...
+text.fail                = Fail
+text.favorite            = Favoris\r\n
+text.filteredusers       = Filtered users
+text.future              = Future
+text.gradeitems          = Grades
+text.hours               = Heures
+text.inprogress          = In progress
+text.ip                  = IP Address
+text.lastaccess          = Dernier acc\u00E8s:
+text.license             = License: MIT
+text.logs                = Logs
+text.minutes             = Minutes
+text.modelversionchanged = Incompatible version of data cache with this new version.\r\nIt is necessary to reload the course data.
+text.moodle              = Moodle: 
+text.never               = Jamais
+text.noActivity          = No activity
+text.nousers             = Pas de co\u00EFncidences
+text.online_false        = Mode: Offline
+text.online_true         = Mode: Online
+text.origin              = Origin
+text.pass                = Pass
+text.past                = Past
+text.recent              = R\u00E9cente
+text.restoredefault      = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
+text.search              = Search
+text.seconds             = Secondes
+text.section             = Section
+text.sectionplaceholder  = Page de garde
+text.see                 = See 
+text.selectall           = Select/Deselect all
+text.selectedUsers       = Selected users
+text.session             = # of sessions: 
+text.stats               = Statistiques
+text.thanks              = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+text.thankstitle         = Acknowledgments:
+text.total               = Total
+text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = Troisi\u00E8me intervalle
 
