User profile info added first and last user button

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -873,7 +873,7 @@ text.lastaccess          = Letzter Zugriff:
 text.license             = License: MIT
 text.logs                = Logs
 text.minutes             = Protokoll
-text.modelversionchanged = Incompatible version of data cache with this new version.\r\nIt is necessary to reload the course data.
+text.modelversionchanged = Incompatible version of data cache with this new version.\r\n\r\n\r\nIt is necessary to download the data cache again.
 text.moodle              = Moodle: 
 text.never               = noch nie
 text.noActivity          = No activity
