--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -873,7 +873,7 @@ text.lastaccess          = \u00DAltimo acceso:
 text.license             = Licencia: MIT
 text.logs                = Registros
 text.minutes             = minutos
-text.modelversionchanged = Versi\u00F3n incompatible de cach\u00E9 de datos con esta nueva versi\u00F3n.\r\nEs necesario recargar los datos de la asignatura.
+text.modelversionchanged = Versi\u00F3n incompatible de cach\u00E9 de datos con esta nueva versi\u00F3n\r\n\r\nEs necesario descargar nuevamente los datos de las asignaturas.
 text.moodle              = Moodle: 
 text.never               = Nunca
 text.noActivity          = Sin actividad
