--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -873,7 +873,7 @@ text.lastaccess          = \u00DAltimo acesso:
 text.license             = License: MIT
 text.logs                = Logs
 text.minutes             = Minutos
-text.modelversionchanged = Incompatible version of data cache with this new version.\r\nIt is necessary to reload the course data.
+text.modelversionchanged = Incompatible version of data cache with this new version.\r\n\r\n\r\nIt is necessary to download the data cache again.
 text.moodle              = Moodle: 
 text.never               = Nunca
 text.noActivity          = No activity
