--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -115,6 +115,7 @@ borderLength = ample de l\u00EDnia
 
 borderSpace = Espai entre l\u00EDnies
 
+btn.cancel   = Cancel
 btn.clear    = Clar
 btn.enter    = Introdu\u00EFu
 btn.filter   = Aplicar el filtre de dates
@@ -784,6 +785,7 @@ menu.savechart           = Desa el gr\u00E0fic com ...
 menu.theme               = Themes
 menu.tools               = Tools
 menu.update              = Update course
+menu.usermanual          = U_ser's guide
 menu.view                = View
 
 message.export                = Exportaci\u00F3 amb \u00E8xit. Revisi el fitxer del directori: 
