--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -115,6 +115,7 @@ borderLength = Linienbreite
 
 borderSpace = Zeilenabstand
 
+btn.cancel   = Cancel
 btn.clear    = klar
 btn.enter    = Eingeben
 btn.filter   = Datumsfilter anwenden
@@ -784,6 +785,7 @@ menu.savechart           = Grafik speichern unter ...
 menu.theme               = Themes
 menu.tools               = Tools
 menu.update              = Update course
+menu.usermanual          = U_ser's guide
 menu.view                = View
 
 message.export                = Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
