--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -115,6 +115,7 @@ borderLength = Ancho de l\u00EDnea
 
 borderSpace = Espaciado entre l\u00EDneas
 
+btn.cancel   = Cancelar
 btn.clear    = Borrar
 btn.enter    = Entrar
 btn.filter   = Aplicar filtro de fechas
@@ -784,6 +785,7 @@ menu.savechart           = _Guardar gr\u00E1fico como...
 menu.theme               = _Temas
 menu.tools               = _Herramientas
 menu.update              = Actua_lizar curso
+menu.usermanual          = Ma_nual de usuario
 menu.view                = _Ver
 
 message.export                = Exportaci\u00F3n con \u00E9xito. Revise el fichero: 
