--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -115,6 +115,7 @@ borderLength = Largeur de ligne
 
 borderSpace = Interligne
 
+btn.cancel   = Cancel
 btn.clear    = Clair
 btn.enter    = Entrer
 btn.filter   = Apply dates filter
@@ -784,6 +785,7 @@ menu.savechart           = Enregistrer le graphique sous ...
 menu.theme               = Themes
 menu.tools               = Tools
 menu.update              = Update course
+menu.usermanual          = U_ser's guide
 menu.view                = View
 
 message.export                = Export avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
