--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -115,6 +115,7 @@ borderLength = Larghezza della linea
 
 borderSpace = Interlinea
 
+btn.cancel   = Cancel
 btn.clear    = Chiaro
 btn.enter    = accedere
 btn.filter   = Applica il filtro delle date
@@ -784,6 +785,7 @@ menu.savechart           = Salva grafico come ...
 menu.theme               = Themes
 menu.tools               = Tools
 menu.update              = Update course
+menu.usermanual          = U_ser's guide
 menu.view                = View
 
 message.export                = Esportazione con successo. Esaminare i file nella directory: 
