--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -115,6 +115,7 @@ borderLength = Espessura da linha
 
 borderSpace = Espa\u00E7amento entre linhas
 
+btn.cancel   = Cancel
 btn.clear    = Claro
 btn.enter    = Entrar
 btn.filter   = Aplicar filtro de datas
@@ -784,6 +785,7 @@ menu.savechart           = Salvar gr\u00E1fico como ...
 menu.theme               = Theme
 menu.tools               = Tools
 menu.update              = Update course
+menu.usermanual          = U_ser's guide
 menu.view                = View
 
 message.export                = Exporta\u00E7\u00E3o com sucesso. Revise os arquivos no diret\u00F3rio: 
