--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -115,6 +115,7 @@ borderLength = Line width
 
 borderSpace = Line spacing
 
+btn.cancel   = Cancel
 btn.clear    = Clear
 btn.enter    = Enter
 btn.filter   = Apply dates filter
@@ -784,6 +785,7 @@ menu.savechart           = _Save chart as...
 menu.theme               = _Themes
 menu.tools               = _Tools
 menu.update              = _Update course
+menu.usermanual          = U_ser's guide
 menu.view                = _View
 
 message.export                = Export successfully. Review the file: 
