Added option to limit level expansion in Treeview grade item

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -302,6 +302,8 @@ legendActive = Chart legend
 
 limitDays = Limit days
 
+limitLevelGradeItem = Grade Item limit level
+
 listCharts = Charts available
 
 log.component.activity_report                                   = Activity report
