--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -302,6 +302,8 @@ legendActive = Llegenda de l'gr\u00E0fic
 
 limitDays = Limit days
 
+limitLevelGradeItem = Grade Item limit level
+
 listCharts = Gr\u00E1ficas disponibles
 
 log.component.activity_report                                   = Informe d'activitat
