--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -302,6 +302,8 @@ legendActive = Leyenda del gr\u00E1fico
 
 limitDays = L\u00EDmite de d\u00EDas
 
+limitLevelGradeItem = Limite nivel Item de calificaci\u00F3nL
+
 listCharts = Charts available
 
 log.component.activity_report                                   = Actividad del curso
