--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -302,6 +302,8 @@ legendActive = Graphique l\u00E9gende
 
 limitDays = Limit days
 
+limitLevelGradeItem = Grade Item limit level
+
 listCharts = Charts available
 
 log.component.activity_report                                   = Activit\u00E9s du cours
