--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -302,6 +302,8 @@ legendActive = Grafico leggenda
 
 limitDays = Limit days
 
+limitLevelGradeItem = Grade Item limit level
+
 listCharts = Charts available
 
 log.component.activity_report                                   = Attivit\u00E0 del corso
