--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -302,6 +302,8 @@ legendActive = Diagrammlegende
 
 limitDays = Limit days
 
+limitLevelGradeItem = Grade Item limit level
+
 listCharts = Charts available
 
 log.component.activity_report                                   = Kursaktivit\u00E4t
