--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -302,6 +302,8 @@ legendActive = Chart legend
 
 limitDays = Limit days
 
+limitLevelGradeItem = Grade Item limit level
+
 listCharts = Charts available
 
 log.component.activity_report                                   = Activity report
