Change CheckComboBox to show n/total count

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -304,7 +304,7 @@ limitDays = Limit days
 
 limitLevelGradeItem = Grade Item limit level
 
-listCharts = Gr\u00E1ficas disponibles
+listCharts = Charts available
 
 log.component.activity_report                                   = Informe d'activitat
 log.component.assignment                                        = Tasca
