--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -304,7 +304,7 @@ limitDays = L\u00EDmite de d\u00EDas
 
 limitLevelGradeItem = Limite nivel Item de calificaci\u00F3nL
 
-listCharts = Charts available
+listCharts = Gr\u00E1ficas disponibles
 
 log.component.activity_report                                   = Actividad del curso
 log.component.assignment                                        = Tarea
