--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -141,6 +141,7 @@ clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
 clustering.hierarchical                  = Hierarchical
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
+clustering.iterations                    = Iterations
 clustering.label                         = Label
 clustering.logTypes                      = Types
 clustering.manageLabels                  = Manage labels
