--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -141,6 +141,7 @@ clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
 clustering.hierarchical                  = Jer\u00E1rquico
 clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
+clustering.iterations                    = Iteraciones
 clustering.label                         = Etiquetar
 clustering.logTypes                      = Tipos
 clustering.manageLabels                  = Gestionar etiquetas
