Añadir opción de quitar/poner columnas con constantes #91

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -137,6 +137,7 @@ clustering.error.notUsers                = No users selected
 clustering.error.parameter               = Invalid field [{0}] ({1}), must be greater than {2}.
 clustering.execute                       = Execute
 clustering.exportGrades                  = Export grades
+clustering.filter                        = Filter data
 clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
 clustering.hierarchical                  = Hierarchical
