--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -302,7 +302,7 @@ legendActive = Leyenda del gr\u00E1fico
 
 limitDays = L\u00EDmite de d\u00EDas
 
-limitLevelGradeItem = Limite nivel Item de calificaci\u00F3nL
+limitLevelGradeItem = L\u00EDmite nivel Item de calificaci\u00F3n
 
 listCharts = Gr\u00E1ficas disponibles
 
