--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -124,7 +124,7 @@ clustering.centroid                      = Centroid
 clustering.centroids                     = Centroids
 clustering.cluster                       = Cluster
 clustering.clusters                      = Clusters
-clustering.distance                      = Type of distance
+clustering.distance                      = Distance measure
 clustering.distance.canberra_distance    = Canberra
 clustering.distance.chebyshev_distance   = Chebyshev
 clustering.distance.earthmovers_distance = Earth mover's
@@ -146,17 +146,20 @@ clustering.iterations                    = Iterations
 clustering.label                         = Label
 clustering.logTypes                      = Types
 clustering.manageLabels                  = Manage labels
-clustering.maxIterations                 = Max number of iterations
+clustering.maxIterations                 = Max n\u00BA of iterations
+clustering.maxNumberOfClusters           = N\u00BA max. of clusters
 clustering.minPts                        = Min. points per cluster
 clustering.noLabels                      = No labels have been created
 clustering.numTrials                     = Number of trial
-clustering.numberOfClusters              = Number of clusters
+clustering.numberOfClusters              = N\u00BA of clusters
 clustering.reduce                        = Reduce dimension
 clustering.removeLabels                  = Delete selected
 clustering.silhouetteAnalysis            = Silhouette analysis
 clustering.silhouetteWidth               = Silhouette Width
+clustering.smooth                        = Smooth
 clustering.standard                      = Standard
 clustering.table                         = Data table
+clustering.tol                           = Tolerance
 clustering.type.activity                 = Activity Completion
 clustering.type.grade                    = Grade
 clustering.type.logs.component           = Component
