--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -124,7 +124,7 @@ clustering.centroid                      = Centroide
 clustering.centroids                     = Centroides
 clustering.cluster                       = Agrupaci\u00F3n
 clustering.clusters                      = Agrupaciones
-clustering.distance                      = Tipo de distancia
+clustering.distance                      = Medida de distancia
 clustering.distance.canberra_distance    = Canberra
 clustering.distance.chebyshev_distance   = Chebyshov
 clustering.distance.earthmovers_distance = Mov. de Tierra
@@ -146,17 +146,20 @@ clustering.iterations                    = Iteraciones
 clustering.label                         = Etiquetar
 clustering.logTypes                      = Tipos
 clustering.manageLabels                  = Gestionar etiquetas
-clustering.maxIterations                 = M\u00E1x. n\u00FAmero de iteraciones
+clustering.maxIterations                 = M\u00E1x. n\u00BA de iteraciones
+clustering.maxNumberOfClusters           = N\u00BA m\u00E1x. de agrupaciones
 clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F3n
 clustering.noLabels                      = No se han creado etiquetas
 clustering.numTrials                     = N\u00FAmero de intentos
-clustering.numberOfClusters              = N\u00FAmero de agrupaciones
+clustering.numberOfClusters              = N\u00BA de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
 clustering.removeLabels                  = Borrar seleccionados
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
 clustering.silhouetteWidth               = Ancho de silueta
+clustering.smooth                        = Smooth
 clustering.standard                      = Normal
 clustering.table                         = Tabla de datos
+clustering.tol                           = Tolerancia
 clustering.type.activity                 = Finalizaci\u00F3n Actividad
 clustering.type.grade                    = Calificaci\u00F3n
 clustering.type.logs.component           = Componente
