Added configuration for the launcher

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Tercer quartil
 chartlabel.upperlimit     = L\u00EDmit superior
 
-checkbox.onlyweb    = Web logs only
-checkbox.updatedata = Actualitzaci\u00F3 de dades
+checkbox.checkupdatesagain = Check for updates at startup
+checkbox.onlyweb           = Web logs only
+checkbox.updatedata        = Actualitzaci\u00F3 de dades
 
 chk.offlinemode  = Mode Desconnectat
 chk.savehost     = Recorda l'amfitri\u00F3
@@ -281,6 +282,8 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Contrasenya:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
+label.restartapplication          = Need to restart the application for the changes to take effect
+label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = S'est\u00E0 desant en local ...
@@ -920,7 +923,8 @@ useQuartile = Cmb quartils
 
 warning = Warning
 
-warning.nofound = No result matches in the search.
+warning.cannotfind = Cannot find executables in the directory: 
+warning.nofound    = No result matches in the search.
 
 zeroLineColor = color de la l\u00EDnia zero
 
