--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
 chartlabel.upperlimit     = Upper Limit
 
-checkbox.onlyweb    = Web logs only
-checkbox.updatedata = Update data
+checkbox.checkupdatesagain = Check for updates at startup
+checkbox.onlyweb           = Web logs only
+checkbox.updatedata        = Update data
 
 chk.offlinemode  = Offline mode
 chk.savehost     = Remember host
@@ -281,6 +282,8 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
+label.restartapplication          = Need to Need to restart the application for the changes to take effect
+label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Saving in local...
@@ -920,7 +923,8 @@ useQuartile = With quartiles
 
 warning = Warning
 
-warning.nofound = No result matches in the search.
+warning.cannotfind = Cannot find executables in the directory: 
+warning.nofound    = No result matches in the search.
 
 zeroLineColor = Zero line color
 
