--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = L\u00EDmite Superior
 
-checkbox.onlyweb    = Solo registros de web
-checkbox.updatedata = Actualizar datos
+checkbox.checkupdatesagain = Comprobar actualizaciones en el arranque
+checkbox.onlyweb           = Solo registros de web
+checkbox.updatedata        = Actualizar datos
 
 chk.offlinemode  = Modo sin conexi\u00F3n
 chk.savehost     = Recordar host
@@ -281,6 +282,8 @@ label.parselog                    = Parseando los registros...
 label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
 label.relogin                     = Fallo al descargar los registros. Intentando iniciar sesion de nuevo y volver a descargar.
+label.restartapplication          = Necesario reiniciar la aplicaci\u00F3n para que los cambios surtan efecto
+label.restoreversion              = Restaurar a versi\u00F3n:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Guardando en local...
@@ -920,7 +923,8 @@ useQuartile = Con cuartiles
 
 warning = Advertencia
 
-warning.nofound = No hay resultados en la b\u00FAsqueda.
+warning.cannotfind = No se encuentra ejecutables en el directorio: 
+warning.nofound    = No hay resultados en la b\u00FAsqueda.
 
 zeroLineColor = Color de la l\u00EDnea cero
 
