--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Significare
 chartlabel.thirdquartile  = Terzo quartile
 chartlabel.upperlimit     = Limite superiore
 
-checkbox.onlyweb    = Web logs only
-checkbox.updatedata = Aggiorna i dati
+checkbox.checkupdatesagain = Check for updates at startup
+checkbox.onlyweb           = Web logs only
+checkbox.updatedata        = Aggiorna i dati
 
 chk.offlinemode  = Modalit\u00E0 offline
 chk.savehost     = Ricorda l'host
@@ -281,6 +282,8 @@ label.parselog                    = Parsing logs...
 label.participants                = partecipanti
 label.pass                        = La password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
+label.restartapplication          = Need to restart the application for the changes to take effect
+label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Salvataggio in locale ...
@@ -920,7 +923,8 @@ useQuartile = Con quartili
 
 warning = Warning
 
-warning.nofound = No result matches in the search.
+warning.cannotfind = Cannot find executables in the directory: 
+warning.nofound    = No result matches in the search.
 
 zeroLineColor = Colore della linea Zero
 
