--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Bedeuten
 chartlabel.thirdquartile  = Drittes Quartil
 chartlabel.upperlimit     = Obere Grenze
 
-checkbox.onlyweb    = Only origin web
-checkbox.updatedata = Daten aktualisieren
+checkbox.checkupdatesagain = Check for updates at startup
+checkbox.onlyweb           = Only origin web
+checkbox.updatedata        = Daten aktualisieren
 
 chk.offlinemode  = Offline-Modus
 chk.savehost     = Erinnere dich an den Gastgeber
@@ -281,6 +282,8 @@ label.parselog                    = Parsing logs...
 label.participants                = Teilnehmer
 label.pass                        = Passwort:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
+label.restartapplication          = Need to restart the application for the changes to take effect
+label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Speichern in lokaler ...
@@ -920,7 +923,8 @@ useQuartile = Mit Quartile
 
 warning = Warning
 
-warning.nofound = No result matches in the search.
+warning.cannotfind = Cannot find executables in the directory: 
+warning.nofound    = No result matches in the search.
 
 zeroLineColor = Nullinie Farbe
 
