--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Signifier
 chartlabel.thirdquartile  = Troisi\u00E8me quartile
 chartlabel.upperlimit     = Limite sup\u00E9rieure
 
-checkbox.onlyweb    = Web logs only
-checkbox.updatedata = Mettre \u00E0 jour les donn\u00E9es
+checkbox.checkupdatesagain = Check for updates at startup
+checkbox.onlyweb           = Web logs only
+checkbox.updatedata        = Mettre \u00E0 jour les donn\u00E9es
 
 chk.offlinemode  = Mode hors-ligne
 chk.savehost     = Rappelez-vous l'h\u00F4te
@@ -281,6 +282,8 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Mot de passe:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
+label.restartapplication          = Need to restart the application for the changes to take effect
+label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = \u00C9conomiser en local ...
@@ -920,7 +923,8 @@ useQuartile = Cvec quartiles
 
 warning = Warning
 
-warning.nofound = No result matches in the search.
+warning.cannotfind = Cannot find executables in the directory: 
+warning.nofound    = No result matches in the search.
 
 zeroLineColor = Couleur de la ligne z\u00E9ro
 
