--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -157,8 +157,9 @@ chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Terceiro quartil
 chartlabel.upperlimit     = Limite superior
 
-checkbox.onlyweb    = Web logs only
-checkbox.updatedata = Atualizar dados
+checkbox.checkupdatesagain = Check for updates at startup
+checkbox.onlyweb           = Web logs only
+checkbox.updatedata        = Atualizar dados
 
 chk.offlinemode  = Modo offline
 chk.savehost     = Lembre-se do host
@@ -281,6 +282,8 @@ label.parselog                    = Parsing logs...
 label.participants                = Participantes
 label.pass                        = Senha:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
+label.restartapplication          = Need to restart the application for the changes to take effect
+label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Salvando em locais ...
@@ -920,7 +923,8 @@ useQuartile = Com quartis
 
 warning = Warning
 
-warning.nofound = No result matches in the search.
+warning.cannotfind = Cannot find executables in the directory: 
+warning.nofound    = No result matches in the search.
 
 zeroLineColor = Zero cor de linha
 
