--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -131,6 +131,7 @@ clustering.distance.earthmovers_distance = Earth mover's
 clustering.distance.euclidean_distance   = Euclidean
 clustering.distance.manhattan_distance   = Manhattan
 clustering.eps                           = Max. radius of the neighborhood
+clustering.error.invalidDimension        = Invalid dimension reduction number.
 clustering.error.lessUsersThanClusters   = Fewer selected users than clusters
 clustering.error.notData                 = No data selected
 clustering.error.notUsers                = No users selected
@@ -142,6 +143,7 @@ clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
 clustering.hierarchical                  = Hierarchical
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
+clustering.item                          = Item
 clustering.iterations                    = Iterations
 clustering.label                         = Label
 clustering.logTypes                      = Types
@@ -160,12 +162,14 @@ clustering.smooth                        = Smooth
 clustering.standard                      = Standard
 clustering.table                         = Data table
 clustering.tol                           = Tolerance
+clustering.type                          = Type
 clustering.type.activity                 = Activity Completion
 clustering.type.grade                    = Grade
 clustering.type.logs.component           = Component
 clustering.type.logs.coursemodule        = Course Module
 clustering.type.logs.event               = Event
 clustering.type.logs.section             = Section
+clustering.value                         = Value
 
 cutGrade = Grade to pass
 
