--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -131,6 +131,7 @@ clustering.distance.earthmovers_distance = Mov. de Tierra
 clustering.distance.euclidean_distance   = Euclidiana
 clustering.distance.manhattan_distance   = Manhattan
 clustering.eps                           = Radio m\u00E1x. de vecindad
+clustering.error.invalidDimension        = N\u00FAmero de reducci\u00F3n de dimensiones invalido.
 clustering.error.lessUsersThanClusters   = Menos usuarios seleccionados que agrupaciones
 clustering.error.notData                 = No hay datos seleccionados
 clustering.error.notUsers                = No hay usuarios seleccionados
@@ -142,6 +143,7 @@ clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
 clustering.hierarchical                  = Jer\u00E1rquico
 clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
+clustering.item                          = Elemento
 clustering.iterations                    = Iteraciones
 clustering.label                         = Etiquetar
 clustering.logTypes                      = Tipos
@@ -160,12 +162,14 @@ clustering.smooth                        = Smooth
 clustering.standard                      = Normal
 clustering.table                         = Tabla de datos
 clustering.tol                           = Tolerancia
+clustering.type                          = Tipo
 clustering.type.activity                 = Finalizaci\u00F3n Actividad
 clustering.type.grade                    = Calificaci\u00F3n
 clustering.type.logs.component           = Componente
 clustering.type.logs.coursemodule        = M\u00F3dulo curso
 clustering.type.logs.event               = Evento
 clustering.type.logs.section             = Secci\u00F3n
+clustering.value                         = Valor
 
 cutGrade = Nota de corte
 
