Added beta tester option in launch configuration

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Tercer quartil
 chartlabel.upperlimit     = L\u00EDmit superior
 
+checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
 checkbox.updatedata        = Actualitzaci\u00F3 de dades
