--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Bedeuten
 chartlabel.thirdquartile  = Drittes Quartil
 chartlabel.upperlimit     = Obere Grenze
 
+checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Only origin web
 checkbox.updatedata        = Daten aktualisieren
