--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
 chartlabel.upperlimit     = Upper Limit
 
+checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
 checkbox.updatedata        = Update data
