--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = L\u00EDmite Superior
 
+checkbox.betatester        = Recibir versiones de prueba
 checkbox.checkupdatesagain = Comprobar actualizaciones en el arranque
 checkbox.onlyweb           = Solo registros de web
 checkbox.updatedata        = Actualizar datos
