--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Signifier
 chartlabel.thirdquartile  = Troisi\u00E8me quartile
 chartlabel.upperlimit     = Limite sup\u00E9rieure
 
+checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
 checkbox.updatedata        = Mettre \u00E0 jour les donn\u00E9es
