--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Significare
 chartlabel.thirdquartile  = Terzo quartile
 chartlabel.upperlimit     = Limite superiore
 
+checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
 checkbox.updatedata        = Aggiorna i dati
