--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -157,6 +157,7 @@ chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Terceiro quartil
 chartlabel.upperlimit     = Limite superior
 
+checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
 checkbox.updatedata        = Atualizar dados
